app/assets/stylesheets/gallery.css.sass
@import 'mixins'

.gallery-wrapper
  margin-top: 20px

  .add-group
    margin-right: 20px
    margin-top: -4px
    
.gallery-contents
  margin-top: 10px

.gallery-filter
  input
    margin-top: -4px
    margin-right: 20px !important

.gallery-filter
  @include primary-font
  font-size: 16px
  margin-bottom: 14px
  .dropdown
    cursor: pointer
    display: inline-block
    margin-right: 10px
    background:  white  !important

    .dropdown-menu
      box-shadow: none
      background: white !important
      border-radius: 0px
      li > a
        &:hover
          background: $orange
        color: black !important

    a
      color: black
      @include primary-font
      font-size: 16px
  li > a
    padding: 0 0 2px 0 !important
    margin-left: 18px
    cursor: pointer

  .dropdown-menu
    a
      margin-left: 30px
    a.active
      &:before
        content: "\2713"
        position:  absolute
        left:  10px
        font-size:  80%
        color:  $orange

  .clear-search
    position: absolute
    right:  25px
    bottom:  4px
    color:  #a9a9a9

  .search-query
    margin-top: -9px

.filter-collapser
  cursor: pointer

.filters-group
  width: auto
  position: absolute
  top:  90%
  z-index: 100
  padding: 10px 30px 20px 30px
  background-color: rgba(255, 255, 255, .9)
  border-bottom-left-radius: 5px
  border-bottom-right-radius: 5px
  border-top-right-radius: 5px
  .btn-group
    margin-top: 15px
    margin-left: 0px
  @include bottom-only-annotation-shadow
  overflow:  hidden

  .first-separate
    .btn-group
      .btn:first-child
        margin-right: 12px
        width:  auto

  .btn
    background-image: none
    background-color: #f1f1f1
    border-color:  #ccc
    color: #666
    border-radius:  2px !important
    -webkit-border-radius:  1px
    width:  120px
    text-align:  center

  .btn.active
    background-color: #ddd !important
    color: inherit
    text-shadow: none

.filter-collapser
  display: inline-block

.current-filter
  font-size: 70%
  display: inline-block
  color: $orange
  border: 1px solid $orange
  border-radius: 20px
  margin-left: 8px
  position:  relative
  top: 2px
  padding: 0px 8px

.anim-filters
  &.ng-hide-add, &.ng-hide-remove
    @include transition(all cubic-bezier(0.25, 0.46, 0.45, 0.94) .25s)
    display: block !important
    opacity: 1
    max-height: 150px
  &.ng-hide
    opacity: 0
    max-height: 0px    


.pagination
  @include primary-font
  font-size: 20px


.gallery-spinner
  color: $orange
  font-size: 40px
  margin-top: 40px
  margin-left: 20px

.left-group
  li
    margin-right: $baseline * 2

.media-box-3-image
  overflow: hidden
  margin-bottom: 10px
  img
    margin: 0

.sash
  color: white
  background-color: $orange
  @include transform(rotate(45deg))
  @include transform-origin(50% 50%)
  position: absolute
  width: 200px
  height: 20px
  top: 30px
  right: -60px
  text-align: center

.new-ingredient-modal
  input
    width: 95%

@media (max-width: 980px)
  .left-group
    width: 100%
  .add-group
    .browse-by
      display: none
    padding-top: 10px
    font-size: 80%
    li > a
      margin-left: 10px
  .filters-group
    right: -140px
  .current-filter
    display: none
  .gallery-contents
    margin-top: 4px


@media (max-width: 400px)
  .search-query
    width: 130px

  .filters-group
    right: -90px
    button
      font-size: 10px !important

    .btn
      width:  80px
      text-align:  center

  .add-group
    float: none !important

